# SG13G2_ASIC-Design-Template

./: .designinit  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  make_executable.sh  run_all.sh  update_orfs.sh
.github/workflows/: auto_update.yaml
doc/: floorplan.md  pinout.md  specifications.md
doc/IHP-PDK/: IHPSG13G2_LayoutCheatSheet.xlsx
gds/: counter_board.gds
librelane/: TBD.txt  config.yaml  config_top.yaml  pin_order.cfg  run_librelane.sh
orfs/: env.sh  run_orfs.sh
orfs/flow/: Makefile  report_area.tcl
orfs/flow/designs/ihp-sg13g2/counter_board/: io.tcl  (+1 more)
orfs/flow/scripts/: cts.tcl  detail_place.tcl  final_report.tcl  global_route.tcl  run_command.py  save_images.tcl  synth.sh  synth.tcl  variables.json  variables.mk  variables.yaml
orfs/flow/test/: test_helper.sh
orfs/flow/util/: BUILD.bazel  genMetrics.py  requirements_lock.txt  uploadMetadata.py  utils.mk
python/plot_simulations/: plot_counter_board_tb_tran.py
python/plot_simulations/figures/: counter_board_simulation.csv  counter_board_simulation.eps
reports/: counter_board_final.rpt
verilog/rtl/: counter_board  counter_board.v
verilog/sim/: counter_tb.vhd  sim_verilog_tb.do  sim_vhdl_tb.do  wave_verilog.do  wave_vhdl.do
vhdl/rtl/: constants_p.vhd  counter_board.vhd  counter_ea.vhd
vhdl/sim/: counter_tb.vhd  sim.do  wave.do
xschem/: counter_board.sym  counter_board_bus.sym  counter_board_tb_tran.sch
xschem/testbenches/: counter_board_tb_tran.sch
xspice/counter_board/: counter_board.spice  counter_board.vp  counter_board.xspice  counter_board_bus.xspice
(+47 files in other folders)
